add sshfs scripts, add systemd aliases

--- a/env/.env_global
+++ b/env/.env_global
@@ -6,7 +6,7 @@
 export GPGKEY=448C2B189756743013D5F7C22FD2A59C1D734C1F
 
 # My variables
-export PATH=$PATH:$HOME/.local/bin:$HOME/.dotfiles/bin:$HOME/.dotfiles/bin:$HOME/.dotfiles/bin:$HOME/.dotfiles/bin:$HOME/.dotfiles/bin:$HOME/.dotfiles/bin:$HOME/.dotfiles/bin:$HOME/.dotfiles/bin:.
+export PATH=$PATH:$HOME/.local/bin:$HOME/.dotfiles/bin:$HOME/.dotfiles/bin/sshfs:.
 export PROGRAMS=$HOME/Programs
 export GAMES=$PROGRAMS/Games
 export PAGER=less
@@ -93,6 +93,14 @@ alias img='sxiv'
 
 # Screen off script using vbetool
 alias off='sudo ~/.dotfiles/bin/monitor_off.sh'
+
+# Systemd
+alias sstatus='sudo systemctl status'
+alias sstart='sudo systemctl start'
+alias srestart='sudo systemctl restart'
+alias sstop='sudo systemctl stop'
+alias senable='sudo systemctl enable'
+alias sdisable='sudo systemctl disable'
 
 #
 # ENVIRONMENT INIT
