--- a/i3/config
+++ b/i3/config
@@ -185,6 +185,7 @@ for_window [title="TimeExplorer Suite"] floating enable border normal
 for_window [class="Yad"] floating enable
 for_window [title="Blender User Preferences"] floating enable border normal
 for_window [title="Blender Preferences"] floating enable border normal
+for_window [title="uk-ac-starlink-topcat-Driver"] floating enable border normal
 
 
 # reload the configuration file
