add dot pull to environment

--- a/env/.env_global
+++ b/env/.env_global
@@ -115,6 +115,9 @@ if [ -f ~/.cache/wal/colors-tty.sh ]; then
     source ~/.cache/wal/colors-tty.sh
 fi
 
+# Pull dotfiles
+dot pull
+
 # Add key to keychain
 eval $(keychain --eval $HOME/.ssh/id_rsa)
 
