add ncmpcpp and mpd config files and deployment

--- a/env/.env_global
+++ b/env/.env_global
@@ -81,6 +81,9 @@ alias dot="git -C $HOME/.dotfiles"
 # Neovim instead of vim
 alias vim="nvim"
 
+# Mus invokes ncmpcpp
+alias mus="ncmpcpp"
+
 # Movement random
 alias up="cd .."
 alias back="cd -"
