--- a/mpd/config/mpd.conf
+++ b/mpd/config/mpd.conf
@@ -79,7 +79,7 @@ sticker_file			"~/.local/share/mpd/sticker.sql"
 # systemd socket activiation is in use.
 #
 # For network
-bind_to_address		"127.0.0.1"
+#bind_to_address		"127.0.0.1"
 #
 # And for Unix Socket
 #bind_to_address		"~/.mpd/socket"
@@ -87,7 +87,7 @@ bind_to_address		"127.0.0.1"
 # This setting is the TCP port that is desired for the daemon to get assigned
 # to.
 #
-port				"6601"
+#port				"6600"
 #
 # This setting controls the type of information which is logged. Available 
 # setting arguments are "default", "secure" or "verbose". The "verbose" setting
