fix monitor_off script

--- a/env/.env_global
+++ b/env/.env_global
@@ -95,7 +95,7 @@ alias bc='bc -l'
 alias img='sxiv'
 
 # Screen off script using vbetool
-alias off='sudo ~/.dotfiles/bin/monitor_off.sh'
+alias off='~/.dotfiles/bin/monitor_off'
 
 # Systemd
 alias sstatus='sudo systemctl status'
