do not start megasync, moving to syncthing

--- a/i3/config
+++ b/i3/config
@@ -327,7 +327,7 @@ exec --no-startup-id blueman-applet
 # volume
 exec --no-startup-id pasystray
 # Megasync client
-exec --no-startup-id  (sleep 5 ; megasync)
+#exec --no-startup-id  (sleep 5 ; megasync)
 
 #
 # MONITORS AND XRANDR - autodetect plug-in monitors
