--- a/i3/config
+++ b/i3/config
@@ -347,6 +347,9 @@ exec --no-startup-id udiskie -f "/home/tsagrista/.dotfiles/bin/ranger-urxvt" --t
 # NO SCREENSAVER
 exec --no-startup-id /home/tsagrista/.dotfiles/bin/no-screenoff.sh
 
+# VPN
+exec --no-startup-id mullvad-vpn
+
 # PYWAL
 exec --no-startup-id /home/tsagrista/.local/bin/wal -R
 
