--- a/env/.env_global
+++ b/env/.env_global
@@ -37,7 +37,7 @@ export RANGER_RELOAD_RC=FALSE
 export TERMINAL=urxvt
 export TERM=rxvt-256color
 export BROWSER=qutebrowser
-export EDITOR=/usr/bin/nvim
+export EDITOR=nvim
 GPG_TTY=$(tty)
 export GPG_TTY
 
