--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -1,7 +1,7 @@
 # This is Git's per-user configuration file.
 [user]
 	name = langurmonkey
-	email = tsagrista@ari.uni-heidelberg.de
+	email = me@tonisagrista.com
 [filter "lfs"]
 	required = true
 	clean = git-lfs clean -- %f
