--- a/i3/config
+++ b/i3/config
@@ -162,7 +162,7 @@ bindsym $mod+Shift+9 move container to workspace $ws9
 bindsym $mod+Shift+0 move container to workspace $ws0
 
 # default workspaces
-#assign [class="qutebrowser"] $ws2
+assign [class="qutebrowser"] $ws2
 assign [class="Thunderbird"] $ws3
 #assign [class="URxvt"] $ws1
 assign [class="Eclipse"] $ws4
