--- a/env/.env_global
+++ b/env/.env_global
@@ -13,6 +13,7 @@ export PAGER=less
 
 # Git
 export GIT=$HOME/git
+export TA=$GIT/time-analysis/src
 export GS=$GIT/gaiasky
 export TOPCAT=$PROGRAMS/Topcat
 
