--- a/i3/config
+++ b/i3/config
@@ -348,7 +348,7 @@ exec --no-startup-id udiskie -f "/home/tsagrista/.dotfiles/bin/ranger-urxvt" --t
 exec --no-startup-id /home/tsagrista/.dotfiles/bin/no-screenoff.sh
 
 # VPN
-exec --no-startup-id mullvad-vpn
+#exec --no-startup-id mullvad-vpn
 
 # PYWAL
 exec --no-startup-id /home/tsagrista/.local/bin/wal -R
