--- a/i3/config
+++ b/i3/config
@@ -126,16 +126,16 @@ bindsym $mod+Shift+t exec thunderbird
 bindsym $mod+Shift+f exec ~/.dotfiles/bin/ranger-urxvt "`$HOME/.dotfiles/bin/xcwd`"
 
 # WORKSPACES
-set $ws1 "1: Term"
-set $ws2 "2: Browser"
-set $ws3 "3: Mail"
-set $ws4 "4: Coffee"
-set $ws5 "5: Game"
-set $ws6 "6: Bug"
-set $ws7 "7: Film"
-set $ws8 "8: Lock"
-set $ws9 "9: Compass"
-set $ws0 "10: Text"
+set $ws1 "1"
+set $ws2 "2"
+set $ws3 "3"
+set $ws4 "4"
+set $ws5 "5"
+set $ws6 "6"
+set $ws7 "7"
+set $ws8 "8"
+set $ws9 "9"
+set $ws0 "10"
 
 # switch to workspace
 bindsym $mod+1 workspace $ws1
