--- a/compton/compton.conf
+++ b/compton/compton.conf
@@ -4,9 +4,6 @@
 
 shadow = true;
 shadow-opacity = 0.8;
-no-dock-shadow = true;
-no-dnd-shadow = true;
-clear-shadow = true;
 shadow-radius = 3;
 shadow-offset-x = -3;
 shadow-offset-y = -3;
@@ -18,7 +15,6 @@ shadow-ignore-shaped = true;
 # opacity
 ############
 
-menu-opacity = 1.0;
 frame-opacity = 1.0;
 active-opacity = 1.0;
 inactive-opacity = 1.0;
@@ -53,8 +49,7 @@ backend = "glx";
 # GLX backend
 ##############
 glx-no-stencil = true;
-paint-on-overlay = true;
-vsync = "opengl-swc";
+vsync = true;
 
 # GLX backend: Copy unmodified regions from front buffer instead of redrawing them all.
 # My tests with nvidia-drivers show a 10% decrease in performance when the whole screen is modified,
@@ -64,8 +59,6 @@ vsync = "opengl-swc";
 glx-copy-from-font = true;
 
 glx-swap-method = 2;
-
-xrender-sync = true;
 
 xrender-sync-fence = true;
 
