--- a/polybar/config
+++ b/polybar/config
@@ -66,7 +66,7 @@ font-4 = "Font Awesome 5 Brands:style=Regular:size=10;4"
 
 modules-left = i3 
 modules-center = xwindow
-modules-right = mpd xkeyboard updates-arch filesystem memory-info cpu temperature wlan eth backlight battery pulseaudio popup-calendar powermenu
+modules-right = mpd xkeyboard updates-arch filesystem memory-info cpu temperature wlan eth backlight battery pulseaudio popup-calendar nm-launcher powermenu
 
 tray-position = right
 tray-padding = 1
