Add cu and glsl to rifle

--- a/ranger/rifle.conf
+++ b/ranger/rifle.conf
@@ -77,11 +77,13 @@ ext rb  = ruby -- "$1"
 ext js  = node -- "$1"
 ext sh  = sh -- "$1"
 ext php = php -- "$1"
+ext cu = cu -- "$1"
+ext glsl = glsl -- "$1"
 
 #------------
 # HTML files
 #------------
-ext html = php -- "$1"
+ext html = html -- "$1"
 
 #--------------------------------------------
 # Audio without X
