--- a/env/.env_global
+++ b/env/.env_global
@@ -57,7 +57,6 @@ alias cp='cp -i'
 
 # Regular utils
 alias shit='sudo $(history -p \!\!)'
-alias fuck='sudo $(history -p \!\!)'
 # VPN
 alias vpnheidelberguni='sudo openconnect -u st0@ix.urz.uni-heidelberg.de vpn-ac.urz.uni-heidelberg.de'
 # Topcat
@@ -105,6 +104,10 @@ alias srestart='sudo systemctl restart'
 alias sstop='sudo systemctl stop'
 alias senable='sudo systemctl enable'
 alias sdisable='sudo systemctl disable'
+
+# thefuck
+alias fuck=thefuck
+alias shit=thefuck
 
 #
 # ENVIRONMENT INIT
