--- a/env/.env_global
+++ b/env/.env_global
@@ -106,8 +106,8 @@ alias senable='sudo systemctl enable'
 alias sdisable='sudo systemctl disable'
 
 # thefuck
-alias fuck=thefuck
-alias shit=thefuck
+eval "$(thefuck --alias fuck)"
+eval "$(thefuck --alias shit)"
 
 #
 # ENVIRONMENT INIT
