--- a/env/.env_global
+++ b/env/.env_global
@@ -14,6 +14,7 @@ export PAGER=less
 # Git
 export GIT=$HOME/git
 export TA=$GIT/time-analysis/src
+export TAR=$GIT/time-analysis-res/results
 export GS=$GIT/gaiasky
 export TOPCAT=$PROGRAMS/Topcat
 
