--- a/env/.env_arch
+++ b/env/.env_arch
@@ -7,3 +7,5 @@ alias update='sudo pacman -Syu'
 alias updateaur='yay -Syu'
 alias install='sudo pacman -S'
 alias remove='sudo pacman -R'
+
+export PATH=$PATH:/usr/local/cuda/bin/
