--- a/polybar/config
+++ b/polybar/config
@@ -53,10 +53,10 @@ border-color = #00000000
 border-right=10
 border-left=10
 
-padding-left = 0
-padding-right = 2
+padding-left = 1
+padding-right = 1
 
-module-margin-left = 1
+module-margin-left = 0
 module-margin-right = 1
 
 font-0 = "xos4 Terminus:style=Bold:size=13;0"
@@ -231,6 +231,7 @@ click-left = urxvt -e sudo apt upgrade
 [module/xkeyboard]
 type = internal/xkeyboard
 blacklist-0 = num lock
+blacklist-1 = caps lock
 format-prefix = " "
 format-prefix-foreground = ${colors.two}
 format-prefix-underline = ${colors.two}
@@ -238,8 +239,8 @@ format-prefix-underline = ${colors.two}
 label-layout = %layout%
 label-layout-underline = ${colors.two}
 
-label-indicator-padding = 2
-label-indicator-margin = 1
+label-indicator-padding = 0
+label-indicator-margin = 0
 ;label-indicator-background = ${colors.two}
 ;label-indicator-underline = ${colors.two}
 
