Add heka and chimp

--- a/env/.env_global
+++ b/env/.env_global
@@ -67,8 +67,10 @@ alias docker='sudo docker'
 # ARI machines
 alias andromeda='ssh -tX tsagrista@andromeda.ari.uni-heidelberg.de "cd /work/Tux/tsagrista ; bash"'
 alias hercules='ssh -tX tsagrista@hercules.ari.uni-heidelberg.de "cd /work/www-staff/html/gaiasandbox ; bash"'
+alias heka='ssh -tX tsagrista@heka.ari.uni-heidelberg.de'
 alias herschel='ssh -tX tsagrista@herschel.iwr.uni-heidelberg.de'
 alias hidalgo='ssh -tX tsagrista@hidalgo'
+alias chimp='ssh -tX user@chimp'
 alias centaurus='ssh -tX sagrista@centaurus.ari.uni-heidelberg.de'
 alias canisminor='ssh -tX sagrista@canisminor.ari.uni-heidelberg.de'
 alias mintaka='ssh -tX tsagrista@mintaka.ari.uni-heidelberg.de'
