--- a/i3/config
+++ b/i3/config
@@ -186,7 +186,7 @@ for_window [class="Gaia Sky"] floating enable border normal
 for_window [class="obs"] floating enable border normal
 for_window [title="deusex.exe"] floating enable border normal
 for_window [title="megasync"] floating enable border normal
-for_window [title="TimeExplorer Suite"] floating enable border normal
+for_window [class="timeanalysis.py"] floating enable border normal
 for_window [class="Yad"] floating enable
 for_window [title="Blender User Preferences"] floating enable border normal
 for_window [title="Blender Preferences"] floating enable border normal
