--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -372,6 +372,7 @@ map gs shell git -C %d status | less
 map E  edit
 map du shell -p du --max-depth=1 -h --apparent-size | sort -rh
 map dU shell -p du --max-depth=3 -h --apparent-size
+map ex shell -p exiftool %f
 map df shell -p df -h
 map yp shell -f echo -n %d/%f | xsel -i; xsel -o | xsel -i -b
 map yd shell -f echo -n %d    | xsel -i; xsel -o | xsel -i -b
