--- a/i3/config
+++ b/i3/config
@@ -351,12 +351,12 @@ exec --no-startup-id /home/tsagrista/.dotfiles/bin/no-screenoff.sh
 # VPN
 #exec --no-startup-id mullvad-vpn
 
-# PYWAL
-exec --no-startup-id /home/tsagrista/.local/bin/wal -R
-
 #
 # BAR (polybar, bumblebee-status, i3status...)
 #
+
+# PYWAL
+exec /home/tsagrista/.local/bin/wal -R
 
 exec_always --no-startup-id /home/tsagrista/.dotfiles/bin/polybar-launch
 #bar {
@@ -378,3 +378,4 @@ exec_always --no-startup-id /home/tsagrista/.dotfiles/bin/polybar-launch
 #        urgent_workspace #d33682 #d33682 #fdf6e3
 #    }
 #}
+
