--- a/i3/config
+++ b/i3/config
@@ -67,6 +67,10 @@ bindsym $mod+Shift+j move down
 bindsym $mod+Shift+k move up
 bindsym $mod+Shift+l move right
 
+# move the whole workspace to the next output
+bindsym $mod+p move workspace to output right
+bindsym $mod+o move workspace to output left
+
 # alternatively, you can use the cursor keys:
 bindsym $mod+Shift+Left move left
 bindsym $mod+Shift+Down move down
