Yea way too good

--- a/env/.env_global
+++ b/env/.env_global
@@ -34,6 +34,12 @@ export PATH=$PATH:$VULKAN_SDK/bin
 export LD_LIBRARY_PATH=$VULKAN_SDK/lib
 export VK_LAYER_PATH=$VULKAN_SDK/etc/explicit_layer.d
 
+# NNN config
+export NNN_OPTS='cEnrx'
+export NNN_BMS='h:~/;d:~/Documents'
+export NNN_COLORS='12345'
+export NNN_ARCHIVE='\\.(7z|bz2|gz|tar|tgz|zip)$'
+
 # Other utils
 export RANGER_RELOAD_RC=FALSE
 export TERMINAL=urxvt
