Mount qnap alias

--- a/env/.env_global
+++ b/env/.env_global
@@ -81,6 +81,10 @@ alias mintaka='ssh -tX tsagrista@mintaka.ari.uni-heidelberg.de'
 alias welcome='ssh -tX toni.sag@welcome.ari.uni-heidelberg.de'
 alias bohr='ssh -tX tsagrista@bohr.iwr.uni-heidelberg.de'
 
+# Mounts
+alias mountqnap='sudo mkdir -p /run/media/QNAP/Multimedia && sudo mount /run/media/QNAP/Multimedia'
+alias umountqnap='sudo umount /run/media/QNAP/Multimedia'
+
 # Dotfiles git alias
 alias dotfiles="git -C $HOME/.dotfiles"
 alias dot="git -C $HOME/.dotfiles"
