--- a/env/.env_arch
+++ b/env/.env_arch
@@ -10,3 +10,8 @@ alias remove='sudo pacman -R'
 
 export PATH=$PATH:/usr/local/cuda/bin/
 export MNT=/run/media/
+
+# fzf completion
+[ -f /usr/share/fzf/key-bindings.zsh ] && source /usr/share/fzf/key-bindings.zsh
+[ -f /usr/share/fzf/completion.zsh ] && source /usr/share/fzf/completion.zsh
+
